# beefree-sdk-mcp-example-demo

./: .env.example  .gitignore  README.md  config.py  main.py  mcp-tool-list.md  pyproject.toml
static/: app.js  code.ts  index.html  style.css
